[package]
name = "merkle_tree"
version = "0.1.0"
edition = "2021"

[dependencies]
alloy-primitives = { version = "0.7.0", features = ["rlp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
log = "0.4"
env_logger = "0.9"
alloy-signer = { version = "0.3.0" }

[[bin]]
name = "cli"
